--- a/style/styles.css
+++ b/style/styles.css
@@ -65,12 +65,13 @@ body{
 .input-box{
   border-radius: 5px;
   border-style: solid;
-  border-color: grey;
-  color: grey;
+  border-color: LightGrey;
+  border-width: 1px;
+  color: hsl(249, 10%, 26%);
   display: inline-block;
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
-  font-weight: 500;
+  font-weight: 600;
   margin: 10px auto;
   padding: 15px 200px 15px 42px;
 }
@@ -78,6 +79,9 @@ body{
 .claim-button{
   background-color: hsl(154, 59%, 51%);
   border-radius: 5px;
+  border-color: hsl(154, 59%, 51%);
+  border-style: solid;
+  border-width: thin;
   color: white;
   display: inline-block;
   font-size: 16px;
@@ -87,6 +91,10 @@ body{
   margin: 10px auto;
   padding: 15px 120px 15px 120px;
   text-align: center;
+}
+
+.claim-button:hover{
+  opacity: 0.9;
 }
 
 
