--- a/style/styles.css
+++ b/style/styles.css
@@ -15,13 +15,14 @@ body{
 
 .intro-card {
   color: white;
-  max-width: 42%;
+  max-width: 45%;
   padding: 150px 45px;
   text-align: left;
 }
 
 .signup-card{
-  max-width: 50%;
+  max-width: 45%;
+  /* margin-right: 10%; */
 }
 
 .intro-heading{
@@ -59,7 +60,7 @@ body{
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 7px rgba(0, 0, 0, .15) ;
-  padding: 50px;
+  padding: 20px;
 }
 
 .input-box{
@@ -67,13 +68,16 @@ body{
   border-style: solid;
   border-color: LightGrey;
   border-width: 1px;
+  box-sizing: border-box;
   color: hsl(249, 10%, 26%);
-  /* display: block; */
+  display: inline-block;
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
-  margin: 10px auto;
+  width: 80%;
+  margin: 2%;
   padding: 15px 185px 15px 42px;
+  /* padding: 5% 10%; */
 }
 
 .claim-button{
@@ -82,15 +86,17 @@ body{
   border-color: hsl(154, 59%, 51%);
   border-style: solid;
   border-width: thin;
+  box-sizing: border-box;
   color: white;
   display: inline-block;
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   letter-spacing: 1px;
-  margin: 10px auto;
-  padding: 15px 120px 15px 120px;
+  margin: 2%;
+  padding: 15px;
   text-align: center;
+  /* width: 80%; */
 }
 
 .claim-button:hover{
@@ -106,7 +112,7 @@ body{
 
 @media (max-width:375px) {
   .container{
-    margin: 50px;
+    margin:15px;
   }
 
   body{
@@ -118,16 +124,42 @@ body{
   }
 
   .intro-card {
-    max-width: 90%;
-    padding: 50px 45px;
+    max-width: 100%;
+    margin: 50px auto 25px;
+    padding: 5px;
     text-align: center;
   }
 
+  .intro-heading{
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 40px;
+  }
+
   .signup-card{
-    max-width: 90%;
+    max-width: 100%;
+  }
+
+  .intro-content{
+    line-height: 28px;
+  }
+
+  .signup-form{
+    padding: 15px;
   }
 
   .promo-button{
-    padding: 15px 150px 15px 150px;
+    padding: 20px 50px;
+  }
+
+  .input-box{
+    padding: 15px 20px;
+    width: 95%;
+    margin-bottom: 10px;
+    font-weight: 500;
+  }
+
+  .claim-button{
+    padding: 15px 36px;
   }
 }
