--- a/style/styles.css
+++ b/style/styles.css
@@ -14,14 +14,15 @@ body{
 
 
 .intro-card {
+  box-sizing:border-box;
   color: white;
-  max-width: 45%;
+  max-width: 50%;
   padding: 150px 45px;
   text-align: left;
 }
 
 .signup-card{
-  max-width: 45%;
+  max-width: 50%;
   /* margin-right: 10%; */
 }
 
@@ -41,13 +42,14 @@ body{
   border-style: solid;
   border-color: hsl(248, 32%, 49%);
   box-shadow: 0 7px rgba(0, 0, 0, .15) ;
+  box-sizing: border-box;
   color: white;
   display: inline-block;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 16px;
   width: 100%;
-  padding: 15px 105px;
+  padding: 15px 100px;
   margin: 20px auto;
 }
 
@@ -60,7 +62,7 @@ body{
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 7px rgba(0, 0, 0, .15) ;
-  padding: 20px;
+  padding: 30px;
 }
 
 .input-box{
@@ -74,10 +76,9 @@ body{
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
-  width: 80%;
+  width: 95%;
   margin: 2%;
-  padding: 15px 185px 15px 42px;
-  /* padding: 5% 10%; */
+  padding: 15px;
 }
 
 .claim-button{
@@ -96,7 +97,7 @@ body{
   margin: 2%;
   padding: 15px;
   text-align: center;
-  /* width: 80%; */
+  width: 95%;
 }
 
 .claim-button:hover{
@@ -108,6 +109,14 @@ body{
   font-weight: 500;
   text-align: center;
   color: grey;
+}
+
+.terms-highlight{
+  color:Red;
+}
+
+.terms-highlight:hover {
+  text-decoration: underline;
 }
 
 @media (max-width:375px) {
@@ -162,4 +171,23 @@ body{
   .claim-button{
     padding: 15px 36px;
   }
+}
+
+.error-active{
+  border-color: hsl(0, 100%, 74%);
+  border-style: solid;
+  border-width: 2px;
+  display: inline-block;
+}
+
+.error{
+  color: hsl(0, 100%, 74%);
+  font-style: italic;
+  font-size: 11px;
+  text-align: right;
+  width: 100%;
+}
+
+.error-span{
+  display: inline-block;
 }
