--- a/style/styles.css
+++ b/style/styles.css
@@ -91,6 +91,7 @@ body{
   border-color: hsl(154, 59%, 51%);
   border-style: solid;
   border-width: thin;
+  box-shadow: 0 4px hsl(154, 59%, 43%);
   box-sizing: border-box;
   color: white;
   display: inline-block;
@@ -105,7 +106,7 @@ body{
 }
 
 .claim-button:hover{
-  opacity: 0.9;
+  opacity: 0.85;
 }
 
 .terms{
